[package]
name = "js2ts"
version = "0.1.0"
authors = ["Laura Gallo <lgallo1@stevens.edu>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
swc_ecma_ast = "0.96.3"
swc_common = { version = "0.29.28", features = ["tty-emitter"] }
swc_ecma_parser = "0.124.4"
clap = { version = "4.1.4", features = ["derive"] }